# FastAPI_Homework

./: README.md  app.py  pyproject.toml  requirements.txt
routers/: api_router.py  html_index.py
schemas/: book_schema.py
templates/: base.html  html_about.html  html_book_add.html  html_book_description.html  html_books_list.html  html_main_page.html
